complete portfolio side practice without responsive

--- a/Mileston-01/practice/portfolio_side/index.html
+++ b/Mileston-01/practice/portfolio_side/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="/style/style.css">
     <link rel="stylesheet" href="/style/about.css">
     <link rel="stylesheet" href="style/services.css">
+    <link rel="stylesheet" href="style/myskills.css">
+    <link rel="stylesheet" href="/style/contactme.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -120,7 +122,8 @@
                     <div><img src="/images/task_icon/graphics.svg" alt=""></div>
                     <h3>Graphic Design</h3>
                     <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy text.
                     </p>
                 </div>
 
@@ -128,7 +131,8 @@
                     <div><img src="/images/task_icon/coding.svg" alt=""></div>
                     <h3>Web Design</h3>
                     <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy text.
                     </p>
                 </div>
 
@@ -136,7 +140,8 @@
                     <div><img src="/images/task_icon/uxui.svg" alt=""></div>
                     <h3>UI/UX Design</h3>
                     <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy text.
                     </p>
                 </div>
 
@@ -144,7 +149,8 @@
                     <div><img src="/images/task_icon/paintbrush.svg" alt=""></div>
                     <h3>App Design & Develop</h3>
                     <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy text.
                     </p>
                 </div>
 
@@ -152,7 +158,8 @@
                     <div><img src="/images/task_icon/chart.svg" alt=""></div>
                     <h3>Business Analysis</h3>
                     <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy text.
                     </p>
                 </div>
 
@@ -160,11 +167,126 @@
                     <div><img src="/images/task_icon/marketing.svg" alt=""></div>
                     <h3>SEO Marketing</h3>
                     <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy text.
                     </p>
                 </div>
-                
+
             </div>
+        </div>
+        <div class="myskills">
+            <div class="left_skil">
+                <div>
+                    <h1>My Skills</h1>
+                </div>
+                <div>
+                    <ul>
+                        <!-- first skills -->
+                        <li type="none" class="skilone" class="nskil">HTML</li>
+                        <li class="skilper">85%</li>
+
+                        <div class="outaline">
+                            <div class="insida">
+                            </div>
+                        </div>
+
+                        <!-- second skills -->
+                        <li type="none" class="skilone">HTML</li>
+                        <li class="skilper">85%</li>
+
+                        <div class="outaline">
+                            <div class="insida">
+                            </div>
+                        </div>
+
+                        <!-- third skills -->
+                        <li type="none" class="skilone">HTML</li>
+                        <li class="skilper">60%</li>
+
+                        <div class="outaline">
+                            <div class="insida">
+                            </div>
+                        </div>
+
+                        <!-- forth skills -->
+                        <li type="none" class="skilone">HTML</li>
+                        <li class="skilper">85%</li>
+
+                        <div class="outaline">
+                            <div class="insida">
+                            </div>
+                        </div>
+
+                        <!-- five skills -->
+                        <li type="none" class="skilone">HTML</li>
+                        <li class="skilper">85%</li>
+
+                        <div class="outaline">
+                            <div class="insida">
+                            </div>
+                        </div>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="right_skil">
+                <img src="/images/skills_teach.jpg" alt="rasedul">
+            </div>
+
+        </div>
+
+        <div class="contact_me_page">
+            <h1>Contact With Me</h1>
+            <div>
+                <!-- left side contact -->
+                <div class="contact_sid_l">
+                    <h1>Let's get in touch</h1>
+                    <div>
+                        <p>I enjoy discussing new projects and design challenges. Please share as much info, as possible
+                            so we can get the most out of our first catch-up.</p>
+                    </div>
+
+                    <div>
+                        <h2>Living In:</h2>
+                        <p>30 Shacham street, Los Angeles, USA.</p>
+                    </div>
+
+                    <div>
+                        <h2>Call:</h2>
+                        <p>(+060) 444 434 444</p>
+                    </div>
+
+
+                </div>
+                <!-- right side contact-->
+                <div class="contact_sid_r">
+                    <h1>Estimate your Project?</h1>
+                    <div class="contact_form">
+                        <form>
+                            <ol>
+                                <li>
+                                    <label>What is Your Name:</label>
+                                    <input type="text" placeholder=" Joan Mike">
+                                </li>
+                                <br>
+                                <li>
+                                    <label>What is you email:</label>
+                                    <input type="email" placeholder=" xxx@x.com">
+                                </li>
+                                <br>
+                                <li>
+                                    <label for="">How can I help you?</label>
+                                    <textarea name="" id="" raws="40" cols="40" placeholder=" Hey, I need a website........"></textarea>
+                                </li>
+                            </ol>
+                            <br>                      
+                            <button type="submit" class="cbtn">Sent</button>
+                            <button type="reset" class="cbtn">Reset</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
 
